# Graphica

./: .env  404.html  CocoaGUI.py  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
about/: index.html
api/button/: index.html
api/checkbox/: index.html
api/input/: index.html
api/label/: index.html
api/textarea/: index.html
api/utilities/: index.html
api/window/: index.html
cocoagui.egg-info/: PKG-INFO
docs/: about.md  index.md
docs/api/: button.md  checkbox.md  input.md  label.md  textarea.md  utilities.md  window.md
docs/examples/: calculator.md  text-editor.md  todo-app.md
docs/getting-started/: first-app.md  installation.md  quickstart.md
docs/guide/: best-practices.md  events.md  layout.md
examples/: cocoedit.py
examples/calculator/: index.html
examples/text-editor/: index.html
examples/todo-app/: index.html
getting-started/first-app/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
graphica.egg-info/: PKG-INFO  SOURCES.txt
guide/best-practices/: index.html
guide/events/: index.html
guide/layout/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/about/: index.html
site/api/button/: index.html
site/api/checkbox/: index.html
site/api/input/: index.html
site/api/label/: index.html
site/api/textarea/: index.html
site/api/utilities/: index.html
site/api/window/: index.html
site/examples/calculator/: index.html
site/examples/text-editor/: index.html
site/examples/todo-app/: index.html
site/getting-started/first-app/: index.html
site/getting-started/installation/: index.html
site/getting-started/quickstart/: index.html
site/guide/best-practices/: index.html
site/search/: search_index.json
tests/: test_graphica.py
(+2 files in other folders)
