[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "graphica"
version = "1.0.0"
description = "The simplest Python GUI library - create beautiful desktop applications with minimal code"
readme = "README.md"
authors = [
    {name = "Camila 'Mocha' Rose", email = "rblossom.dev@gmail.com"}
]
maintainers = [
    {name = "Camila 'Mocha' Rose", email = "rblossom.dev@gmail.com"}
]
license = {text = "MIT"}
keywords = ["gui", "tkinter", "desktop", "ui", "interface", "simple", "easy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.6"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.urls]
Homepage = "https://github.com/mochacinno-dev/Graphica"
Documentation = "https://mochacinno-dev.github.io/Graphica/"
Repository = "https://github.com/mochacinno-dev/Graphica"
"Bug Tracker" = "https://github.com/mochacinno-dev/Graphica/issues"

[tool.setuptools]
packages = ["graphica"]

[tool.setuptools.package-data]
graphica = ["py.typed"]